--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -45,9 +45,9 @@
                         <img class="logo-large" src="static/images/logo.png">
 
                         <p style="text-align: center;">
-                            Hello visitor, this project was created as one of my personal fun projects.</br>
-                        <ul style="padding-top: 20px;">
-                            <p>Made Posiible By:</p>
+                            Hello, this project was created as one of my personal fun projects.</br>
+                            The project was made possible by:
+                        <ul>
                             <li style="align-items: center;"><strong>Python Flask & gnicorn</strong>: Backend Server</li>
                             <li><strong>Python Beautiful Soup</strong>: Webscraping</li>
                             <li><strong>Chart.js</strong>: Data Visualization</li>
@@ -60,11 +60,11 @@
                         <span class="main-link"><a href="/add-task">Scrape Words</a></span>
                         <br>
                         <p>
-                            Scrape texts of all p-tags from the supplied URL and then counts words.
+                            Scrapes texts from the supplied URL and then counts words, visualizes the data,<br> and then generates a wordcloud image
                         </p>
                         <span class="main-link"><a href="/add-sent-task">Scrape Sentences</a></span>
                         <p>
-                            Scrape texts of all p-tags from the supplied URL,</br>
+                            Scrapes texts from the supplied URL,</br>
                             analyzes the sentiment of each sentence and then visualizes the result.
                         </p>
                     </div>
@@ -101,7 +101,7 @@
 
                             <div class=".col-6 .col-sm-3">
                                 <a class="bottom-link"
-                                    href="https://www.linkedin.com/in/masahiro-mark-fukui-78388ab1"> My Linkedin Profile</a>
+                                    href="https://www.linkedin.com/in/masahiro-mark-fukui-78388ab1">Linkedin Profile</a>
                             </div>
                         </div>
                     </div>
