--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="icon" href="static/images/favicon.png">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -39,7 +42,7 @@
       <div class="col">
         <div class="card mt-3">
           <div class="card-body">
-            <h4 class="mt-3">Word Counter Result</h4>
+            <h4 style="font-family: 'Russo One', sans-serif;">Word Counter Result</h4>
             <hr>
             <div class="table">
               <table class="table table-striped table-bordered table-hover table-sm">
@@ -63,7 +66,7 @@
 
         <div class="card mt-3">
             <div class="card-body">
-              <h4 class="mt-3">WordCloud</h4>
+              <h4 class="mt-3" style="font-family: 'Russo One', sans-serif;">WordCloud</h4>
               <hr>
                 <image class="wordcloud" src="static/images/wordcloud_images/{{ image_name }}.png"></image>
             </div>
