--- a/app/templates/sent_result.html
+++ b/app/templates/sent_result.html
@@ -5,6 +5,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link rel="icon" href="static/images/favicon.png">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -42,7 +45,7 @@
     
     <div class="card mt-3">
         <div class="card-body">
-            <h4 class="mt-3">SentScraper Result</h4>
+            <h4 class="mt-3" style="font-family: 'Russo One', sans-serif;">SentScraper Result</h4>
             <hr>
             <div class="table">
             <table class="table table-striped table-bordered table-hover table-sm">
