--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,7 @@
    <link rel="icon" href="static/images/favicon.png">
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
 
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -49,15 +50,17 @@
                         <hr>
                         <img class="logo-large" src="static/images/logo.png">
 
-                        <p style="text-align: center;">
+                        <p style="text-align: center; font-family: 'JetBrains Mono', monospace;">
                             Hello, this project was created as one of my personal fun projects.</br>
                             The project was made possible by:
+                        <br>
+                        <hr>
                         <ul>
-                            <li style="align-items: center;"><strong>Python Flask & gnicorn</strong>: Backend Server</li>
-                            <li><strong>Python Beautiful Soup</strong>: Webscraping</li>
-                            <li><strong>Chart.js</strong>: Data Visualization</li>
-                            <li><strong>Redis</strong>: Task Queue & Cache Database</li>
-                            <li><strong>Docker & docker-compose</strong>: Deployment</li>
+                            <li style="align-items: center; font-family: 'JetBrains Mono', monospace;"><strong>Python Flask</strong>: Backend Server & Sentiment Analysis</li>
+                            <li style="font-family: 'JetBrains Mono', monospace;"><strong>Python Beautiful Soup</strong>: Webscraping</li>
+                            <li style="font-family: 'JetBrains Mono', monospace;"><strong>Chart.js</strong>: Data Visualization</li>
+                            <li style="font-family: 'JetBrains Mono', monospace;"><strong>Redis</strong>: Task Queue & Cache Database</li>
+                            <li style="font-family: 'JetBrains Mono', monospace;"><strong>Docker</strong>: Deployment</li>
 
                         </ul>
                         </p>
@@ -93,7 +96,7 @@
                                     src="{{ url_for('static', filename='/images/GitHub_Logo.png') }}"></image>
                             </div>
                             <div class=".col-6 .col-sm-3" style="padding-left: 10px;">
-                                <a class="bottom-link" href="https://github.com/Masamerc/SentWordScraper">GitHub repo
+                                <a class="bottom-link" style="font-family: 'JetBrains Mono', monospace;" href="https://github.com/Masamerc/SentWordScraper">GitHub repo
                                     for this project</a>
                             </div>
                         </div>
@@ -105,7 +108,7 @@
                             </div>
 
                             <div class=".col-6 .col-sm-3">
-                                <a class="bottom-link"
+                                <a class="bottom-link" style="font-family: 'JetBrains Mono', monospace;"
                                     href="https://www.linkedin.com/in/masahiro-mark-fukui-78388ab1">Linkedin Profile</a>
                             </div>
                         </div>
