--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="static/images/favicon.png">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -74,13 +75,13 @@
         
         <div class="card mt-3" style="padding-bottom: 100px;">
           <div class="card-body">
-            <h4>Result: Top 10 Scraped Words</h4>
+            <h4 style="font-family: 'Russo One', sans-serif;">Result: Top 10 Scraped Words</h4>
             <hr>
             <div class="chart">
               <canvas id="top10"></canvas>
             </div>
             <br><br>
-            <h4>Showing Scraped Words</h4>
+            <h4 style="font-family: 'Russo One', sans-serif;">Showing Scraped Words</h4>
             <hr>
             <div class="table-wrapper-scroll-y my-custom-scrollbar">
               <table class="table table-bordered table-striped mb-0 table-sm">
