--- a/app/templates/sent_result.html
+++ b/app/templates/sent_result.html
@@ -8,6 +8,7 @@
 <link rel="icon" href="static/images/favicon.png">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -69,7 +70,7 @@
 
     <div class="card mt-3">
         <div class="card-body">
-            <h4>Positives VS Negatives</h4>
+            <h4 style="font-family: 'Russo One', sans-serif;">Positives VS Negatives</h4>
             <hr>
             <p><strong>Positives: </strong>{{ pos_length }}</p>
             <p><strong>Negatives: </strong>{{ neg_length }}</p>
@@ -82,7 +83,7 @@
 
     <div class="card mt-3">
         <div class="card-body">
-            <h4>Top 10</h4>
+            <h4 style="font-family: 'Russo One', sans-serif;">Top 10</h4>
             <hr>
             <table class="table table-bordered table-striped mb-0 table-sm">
                 <thead class="thead-dark">
@@ -119,7 +120,7 @@
 
     <div class="card mt-3" style="padding-bottom: 100px;">
         <div class="card-body">
-            <h4>Worst 10</h4>
+            <h4 style="font-family: 'Russo One', sans-serif;">Worst 10</h4>
             <hr>
             <table class="table table-bordered table-striped table-sm">
                 <thead class="thead-dark">
@@ -154,7 +155,7 @@
 
     <div class="card mt-3">
         <div class="card-body">
-            <h4>All Sentences</h4>
+            <h4 style="font-family: 'Russo One', sans-serif;">All Sentences</h4>
             <hr>
             <div class="table-wrapper-scroll-y my-custom-scrollbar">
             <table class="table table-bordered table-striped mb-0 table-sm">
